--- a/server/src/main/webapp/WEB-INF/rails/package.json
+++ b/server/src/main/webapp/WEB-INF/rails/package.json
@@ -134,5 +134,14 @@
     "webpack": "^4.46.0",
     "webpack-build-notifier": "^2.2.1",
     "webpack-cli": "^4.9.1"
+  },
+  "resolutions": {
+    "eslint/**/glob-parent": ">=6.0.2",
+    "**/chokidar/**/glob-parent": ">=6.0.2",
+    "html-webpack-plugin/**/ansi-regex": "^5.0.1",
+    "sass-lint/**/ansi-regex": "^5.0.1",
+    "sass-lint/**/jsonpointer": ">=5.0.0",
+    "sass-lint/**/merge": ">=2.1.1",
+    "sass-lint/**/minimist": ">=1.2.5"
   }
 }
