Upgrade dom4j from 1.6.1 to 2.1.3
- Fixed compile time generics in test utility
- Fixed incorrect use of Dom4j in FeedEntriesRepresenter which now fails validation

Despite not being flagged on OWASP Dependency Check reports, DOM4J 1.6.1 may be subject to https://nvd.nist.gov/view/vuln/detail?vulnId=CVE-2018-1000632 - it's not clear that this only affects DOM4J 2.x and folks such as Hibernate upgraded it as a result: https://hibernate.atlassian.net/browse/HHH-12964

Additionally, `1.6.1` is very EOL and un-patched.
* It seems fully compatible at runtime
* Old Hibernate depends on it, but was upgraded in https://github.com/hibernate/hibernate-orm/pull/2533 with no other code changes
* Release notes dont mention any serious breaking changes other than compile time generics https://github.com/dom4j/dom4j/releases/tag/version-2.0.0

--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,9 @@
  */
 
 
-import com.github.jk1.license.task.ReportTask
 import com.github.jk1.license.filter.LicenseBundleNormalizer
 import com.github.jk1.license.render.JsonReportRenderer
+import com.github.jk1.license.task.ReportTask
 import groovy.io.FileType
 import nl.javadude.gradle.plugins.license.License
 import org.apache.tools.ant.filters.FixCrLfFilter
@@ -647,6 +647,7 @@ subprojects {
   }
 
   project.configurations*.exclude(group: 'junit')
+  project.configurations*.exclude(group: 'dom4j')
   project.configurations*.exclude(group: 'xalan')
   project.configurations*.exclude(group: 'xml-apis')
 }
