--- a/config/config-server/build.gradle
+++ b/config/config-server/build.gradle
@@ -26,6 +26,7 @@ dependencies {
   }
   implementation project.deps.slf4j
   implementation project.deps.cglib
+  implementation project.deps.jaxen
   compileOnly project.deps.jetBrainsAnnotations
   providedAtPackageTime(project.deps.bouncyCastle)
   testImplementation project(path: ':config:config-api', configuration: 'testOutput')
