--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -50,7 +50,7 @@ final Map<String, String> libraries = [
   commonsPool         : 'org.apache.commons:commons-pool2:2.11.1',
   commonsText         : 'org.apache.commons:commons-text:1.9',
   dbunit              : 'org.dbunit:dbunit:2.7.2',
-  dom4j               : 'dom4j:dom4j:1.6.1',
+  dom4j               : 'org.dom4j:dom4j:2.1.3',
   ehcache             : 'net.sf.ehcache:ehcache:2.10.9.2',
   felix               : 'org.apache.felix:org.apache.felix.framework:7.0.3',
   freemarker          : 'org.freemarker:freemarker:2.3.31',
