Force-upgrade shelljs to 0.8.5 to resolve vulnerability NPM-1006882
Only used for dev by sass-lint's ancient eslint version, and seems to work fine with new version.

--- a/server/src/main/webapp/WEB-INF/rails/package.json
+++ b/server/src/main/webapp/WEB-INF/rails/package.json
@@ -126,6 +126,7 @@
     "sass-lint/**/ansi-regex": "^5.0.1",
     "sass-lint/**/jsonpointer": ">=5.0.0",
     "sass-lint/**/merge": ">=2.1.1",
-    "sass-lint/**/minimist": ">=1.2.5"
+    "sass-lint/**/minimist": ">=1.2.5",
+    "sass-lint/**/shelljs": ">=0.8.5"
   }
 }
