Exclude protobufs as a transitive dependency of the MySQL Connector JDBC driver
This appears only needed by X DevAPI which we do not appear to use. Furthermore, the library reports a vulnerability https://nvd.nist.gov/vuln/detail/CVE-2021-22569

--- a/db-support/db-support-mysql/build.gradle
+++ b/db-support/db-support-mysql/build.gradle
@@ -15,7 +15,10 @@
  */
 
 dependencies {
-    implementation project.deps.mysql
+    implementation(project.deps.mysql) {
+        // Only needed for X DevAPI: https://dev.mysql.com/doc/connector-j/8.0/en/connector-j-installing-maven.html
+        exclude group: 'com.google.protobuf'
+    }
     api project(':db-support:db-support-base')
 
     annotationProcessor project.deps.lombok
