--- a/server/src/main/webapp/WEB-INF/rails/package.json
+++ b/server/src/main/webapp/WEB-INF/rails/package.json
@@ -124,6 +124,7 @@
     "**/chokidar/**/glob-parent": ">=6.0.2",
     "html-webpack-plugin/**/ansi-regex": "^5.0.1",
     "sass-lint/**/ansi-regex": "^5.0.1",
+    "sass-lint/**/ajv": "^6.12.3",
     "sass-lint/**/jsonpointer": ">=5.0.0",
     "sass-lint/**/merge": ">=2.1.1",
     "sass-lint/**/minimist": ">=1.2.5",
