Decrease resource utilization of RetireJS analyzers for OWASP
Filtering non-vulnerable seems to avoid heap issues when running locally with node_modules etc.

--- a/build.gradle
+++ b/build.gradle
@@ -192,7 +192,10 @@ dependencyCheck {
 
   analyzers {
     bundleAuditEnabled = false // Currently there is a separate bundle audit security check job independent of Gradle
-    assemblyEnabled  = false
+    assemblyEnabled = false
+    retirejs {
+      filterNonVulnerable = true
+    }
   }
   skipConfigurations = ['pmd']
   suppressionFile = rootProject.file('buildSrc/dependency-check-suppress.xml').toPath().toString()
