--- a/server/build.gradle
+++ b/server/build.gradle
@@ -767,7 +767,7 @@ task verifyWar(type: VerifyJarTask) {
         "db-support-postgresql-${project.version}.jar",
         "dom4j-${project.versions.dom4j}.jar",
         "domain-${project.version}.jar",
-        "ehcache-${project.versions.ehcache}.jar",
+        "ehcache-core-${project.versions.ehcache}.jar",
         "failureaccess-1.0.1.jar",
         "freemarker-${project.versions.freemarker}.jar",
         "go-plugin-access-${project.version}.jar",
@@ -843,6 +843,7 @@ task verifyWar(type: VerifyJarTask) {
         "spring-tx-${project.versions.spring}.jar",
         "spring-web-${project.versions.spring}.jar",
         "spring-webmvc-${project.versions.spring}.jar",
+        "statistics-1.0.5.jar",
         "token-bucket-${project.versions.tokenBucket}.jar",
         "txw2-${project.versions.jaxb}.jar",
         "urlrewritefilter-${project.versions.urlrewrite}.jar",
