--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -48,7 +48,7 @@ final Map<String, String> libraries = [
   commonsText         : 'org.apache.commons:commons-text:1.10.0',
   dbunit              : 'org.dbunit:dbunit:2.7.3',
   dom4j               : 'org.dom4j:dom4j:2.1.4',
-  ehcache             : 'net.sf.ehcache:ehcache:2.10.9.2',
+  ehcache             : 'net.sf.ehcache.internal:ehcache-core:2.11.0.3.31',
   felix               : 'org.apache.felix:org.apache.felix.framework:7.0.5',
   freemarker          : 'org.freemarker:freemarker:2.3.32',
   gradleDownload      : 'de.undercouch:gradle-download-task:5.4.0',
