--- a/server/src/main/webapp/WEB-INF/rails/package.json
+++ b/server/src/main/webapp/WEB-INF/rails/package.json
@@ -129,5 +129,8 @@
     "webpack-build-notifier": "^2.3.0",
     "webpack-cli": "^4.10.0"
   },
+  "resolutions": {
+    "chokidar@npm:2.1.8/glob-parent": "^5.1.2"
+  },
   "packageManager": "yarn@3.6.1"
 }
